Version 2.1.94
    Fixed a bug where 2 people using Tree Feller could result in the tree being rejected for being too big
    Updated Japanese locale (thanks snake)
    Updated hu_HU locale (thanks andris155)

Version 2.1.93
    Fixed a bug where players would be told they could not breed summoned animals when the animals weren't summoned (bug didn't actually do anything besides send you a message)

Version 2.1.92
    Call Of The Wild (COTW) no longer cares if entities of the same type are nearby when attempting to summon a new entity
    Fixed a bug where COTW summon limit was global instead of per player
    If you are playing in 1.14 mcMMO will now summon cats instead of ocelots
    The default summon limit for COTW is now per player instead of global which is how it should be, for wolves this defaults to 2, for other entities it defaults to 1
    The COTW setting named Summon_Max_Amount in config.yml has been renamed to Per_Player_Limit
    By default players are no longer allowed to breed COTW summoned animals with other animals, you can turn this off (see the notes)
    If a player tries to breed animals with a COTW animal and the server settings prevent this, they are informed via a message that it is not allowed
    If the COTW summon has a lifespan, players are now informed about this lifespan when the entity is first summoned
    COTW entities now send the player a message when they die, time out, or get removed through other means
    COTW summons now have their name prefixed with some colored text to to make it easier to identify them.
    COTW summons now despawn if their owner logs out
    There is now a small 150ms window in which you cannot summon an entity via COTW to prevent accidentally summoning extra entities
    COTW Horses, Cats, and Wolves now always spawn in as adults
    Changed the sound effect for COTW (Fireworks -> Pop)
    Most COTW messages have been tweaked and new COTW messages have been added