@@ -19,6 +19,9 @@ load: STARTUP
 api-version: 1.13
 
 commands:
+    mmodebug:
+        aliases: [mcmmodebugmode]
+        description: Toggles a debug mode which will print useful information to chat
     mmoinfo:
         aliases: [mcinfo]
         description: Info pages for mcMMO
